# ImGPT

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Chat.tsx  Dialog.tsx  Header.tsx  Keybar.tsx  Session.tsx  Sidebar.tsx
src/utils/: localStorage.ts  markdown.tsx  messageStore.ts  selector.ts  settingContext.ts  useMarkdown.tsx
